explore page: fix fonts, display different button on mobile res

--- a/frontend/styles/components/explore/explore.scss
+++ b/frontend/styles/components/explore/explore.scss
@@ -25,6 +25,8 @@
   }
 
   .context-selectors {
+    font-family: $font-family-1;
+
     .dropdown-element {
       display: inline-block;
       margin-bottom: 10px;
@@ -168,5 +170,9 @@
     line-height: 1.3;
     text-align: center;
     white-space: normal;
+
+    &.-no-pointer {
+      cursor: default;
+    }
   }
 }
